<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/darker_gray">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_bright"
        android:layout_weight="4"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:text="@string/numberOne"
            style="@style/buttonCal"
          >

        </Button>
        <Button
            android:text="@string/numberTwo"
            style="@style/buttonCal">

        </Button>
        <Button
            android:text="@string/numberThree"
            style="@style/buttonCal">

        </Button>
        <Button
            android:text="@string/ButtonDivision"
            style="@style/buttonCal">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
    <Button
        android:text="@string/numberFour"
        style="@style/buttonCal">

    </Button>
    <Button
        android:text="@string/numberFive"
        style="@style/buttonCal">

    </Button>
    <Button
        android:text="@string/numberSix"
        style="@style/buttonCal">

    </Button>
    <Button
        android:text="@string/Multiplication"
        style="@style/buttonCal">

    </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
    <Button
        android:text="@string/numberSeven"
        style="@style/buttonCal">

    </Button>
    <Button
        android:text="@string/numberEight"
        style="@style/buttonCal">

    </Button>
    <Button
        android:text="@string/numberNine"
        style="@style/buttonCal">

    </Button>
    <Button
        android:text="@string/Rest"
        style="@style/buttonCal">
        </Button>


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:text="@string/ButtonOn"
                style="@style/buttonCal">

            </Button>
            <Button
                android:text="@string/numberZero"
                style="@style/buttonCal">

            </Button>
            <Button
                android:text="@string/Sum"
                style="@style/buttonCal">

            </Button>
            <Button
                android:text="@string/Button_Equal"
                style="@style/buttonCal">
            </Button>

        </LinearLayout>
   </LinearLayout>
    </LinearLayout>